--- a/thankYouEmail.html
+++ b/thankYouEmail.html
@@ -39,11 +39,11 @@ p,li {
 <tr>
 <td>
 <p style="text-align: justify;">Namaskara [Name],</p>
-<p style="text-align: justify;">Many thanks for joining hands in Nilaya Foundation's vidya daana initiative. Your contribution has helped deserving, poor and meritorious students. This year Nilaya Foundation awarded <strong>Rs 25.24 lakh</strong>s worth scholarships to more than <strong>217 </strong>students.This is achieved in&nbsp;2 phases to account for delay in admission to professional courses due to covid impact.</p>
+<p style="text-align: justify;">Many thanks for joining hands in Nilaya Foundation's vidya daana initiative. Your contribution has helped deserving, poor and meritorious students. This year Nilaya Foundation awarded <strong>Rs 24.74 lakh</strong>s worth scholarships to more than <strong>221 </strong>students.This is achieved in&nbsp;2 phases to account for delay in admission to professional courses due to covid impact.</p>
 <p style="text-align: justify;">Overall summary is as follows:</p>
 <ol style="text-align: justify;">
-<li>Phase 1 : 183 students, Amount : 20,33,000.00 Rs</li>
-<li>Phase 2 : 34 students, Amount : 4,91,000.00 Rs</li>
+<li>Phase 1 : 183 students, 20,33,000.00</li>
+<li>Phase 2 : 34 students, 4,91,000.00</li>
 <li>Students benefited spanned across 120 different places (PIN Code) in 24 districts from 4 different states covering 18 disciplines of study (from Primary to PG courses)</li>
 </ol>
 <p style="text-align: justify;"><strong>This was possible only with your generous contribution.</strong></p>
@@ -51,7 +51,7 @@ p,li {
 <p style="text-align: justify;">Please find attached receipt of your contribution.<br /><br /></p>
 <p style="text-align: justify;">We request you to update your communication details with us for future use.</p>
 <p style="text-align: center;"><a class="button" style="text-color:white" href="https://forms.gle/g85KVWxwc6yWyKQB9">Update Details</a></p>
-<p style="text-align: justify;">Dhanyavada,<br /><strong>Nilaya Foundation,</strong><br /><strong>9448064123</strong><br /><strong>9980541495</strong></p>
+<p style="text-align: justify;">Dhanyavada,<br />Nilaya Foundation,<br />9448064123<br />9980541495</p>
 </td>
 </tr>
 </tbody>
