--- a/thankYouEmail_NonDonors.html
+++ b/thankYouEmail_NonDonors.html
@@ -42,20 +42,21 @@ p,li {
 <p style="text-align: justify;">Many thanks for joining hands in Nilaya Foundation's vidya daana initiative. Your contribution has helped deserving, poor and meritorious students. This year Nilaya Foundation awarded <strong>Rs 23.58 lakhs</strong> worth scholarships to more than <strong>196</strong>students.This is achieved in&nbsp;2 phases to account for delay in admission to professional courses due to covid impact.</p>
 <p style="text-align: justify;">Overall summary is as follows:</p>
 <ol style="text-align: justify;">
-<li>Phase 1 : 196 students, 23,58,500.00 - <a class="button" style="text-color:white" href="https://forms.gle/g85KVWxwc6yWyKQB9">Scholarship Students - Phase 1</a></li>
+<li>Phase 1 : 196 students, 23,58,500.00 - <a  style="text-color:white" href="https://forms.gle/g85KVWxwc6yWyKQB9">Scholarship Students - Phase 1</a></li>
 <li>Phase 2 : 34 students, 4,91,000.00</li>
 <li>Students benefited spanned across 120 different places (PIN Code) in 28 districts from 5 different states covering 20 disciplines of study (from Primary to PG courses)</li>
 </ol>
 <p style="text-align: justify;"><strong>This was possible only with your generous contribution.</strong></p>
 <p style="text-align: justify;">Nilaya family wishes to thank you and your family for this noble act. We sincerely hope that similar help and contribution will continue in future. Feel free to reach out to us for further information.</p>
-<p style="text-align: justify;">Please find attached receipt of your contribution.<br /><br /></p>
+
 <p style="text-align: justify;">We request you to update your communication details with us for future use.</p>
 <p style="text-align: center;"><a class="button" style="text-color:white" href="https://forms.gle/g85KVWxwc6yWyKQB9">Update Details</a></p>
 <p style="text-align: justify;">Dhanyavada,<br />Nilaya Foundation,<br />9448064123, 9980541495<br/></br>
 <a  href="http://www.nilayafoundation.org/"><img src="http://nilayafoundation.org/Nilaya1.jpg" alt="Nilaya Foundation" width="30" height="30"></a>
-<a href="https://www.linkedin.com/in/nilaya-foundation-9b889616a" ><img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="LinkedIn" width="30" height="30"/></a>
+<a href="https://www.linkedin.com/in/nilaya-foundation-9b889616a" target="_blank" ><img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="LinkedIn" width="30" height="30"/></a>
 <a href="http://www.nilayafoundation.org/" ><img src="https://cdn-icons-png.flaticon.com/512/145/145802.png" alt="LinkedIn" width="30" height="30"/></a>
 </p>
+
 </td>
 </tr>
 </tbody>
